tests/ui-stable/transmute-mut-src-not-nocell.stderr
error[E0277]: the trait bound `Src: NoCell` is not satisfied
  --> tests/ui-stable/transmute-mut-src-not-nocell.rs:24:35
   |
24 | const SRC_NOT_NO_CELL: &mut Dst = transmute_mut!(&mut Src);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                   |
   |                                   the trait `NoCell` is not implemented for `Src`
   |                                   required by a bound introduced by this call
   |
   = help: the following other types implement trait `NoCell`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `AssertSrcIsNoCell`
  --> tests/ui-stable/transmute-mut-src-not-nocell.rs:24:35
   |
24 | const SRC_NOT_NO_CELL: &mut Dst = transmute_mut!(&mut Src);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsNoCell`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: NoCell` is not satisfied
  --> tests/ui-stable/transmute-mut-src-not-nocell.rs:24:35
   |
24 | const SRC_NOT_NO_CELL: &mut Dst = transmute_mut!(&mut Src);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `NoCell` is not implemented for `Src`
   |
   = help: the following other types implement trait `NoCell`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `AssertSrcIsNoCell`
  --> tests/ui-stable/transmute-mut-src-not-nocell.rs:24:35
   |
24 | const SRC_NOT_NO_CELL: &mut Dst = transmute_mut!(&mut Src);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsNoCell`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
